<resources>
    <string name="app_name">e-CR Booking</string>
    <string name="add_event">Add Event</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">Duration</string>
    <string name="purpose">Purpose</string>
    <string name="name_hint">Please enter your name</string>
    <string name="purpose_hint">Enter purpose</string>
    <string name="booking_id_hint">Enter booking ID</string>
    <string name="user_hint">Enter user name</string>
    <string name="name">Your Name</string>
    <string name="room">Conference Room</string>
    <string name="book">Book</string>
    <string name="cancel">Swipe to</string>
    <string name="bookings">Bookings</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="no_events">No events to display</string>
    <string name="refresh">Click to refresh</string>
    <string-array name="confRooms">
        <item>"Main Conference Room"</item>
        <item>"Camera Conference Room"</item>
        <item>"Product Conference Room"</item>
        <item>"Adjacent Room to MCR"</item>
        <item>"Reception Area Room"</item>
    </string-array>
</resources>
