<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="kiosk.android.econ.mcrbooking.Main2Activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/dateTimeLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:weightSum="7"
            android:layout_height="match_parent"
            android:background="@drawable/circuit_bg"
            android:orientation="vertical">


            <TextClock
                android:id="@+id/textClock"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/selectedDateText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="30dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:weightSum="7"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:weightSum="4"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TableRow
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:layout_width="0dp">


                    <TextView
                        android:id="@+id/startTimeText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:labelFor="@+id/startTime"
                        android:padding="3dp"
                        android:text="@string/start_time"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorRed"
                        android:textSize="30dp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/endTimeText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:labelFor="@+id/endTime"
                        android:padding="3dp"
                        android:text="@string/end_time"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorRed"
                        android:textSize="30dp" />


                </TableRow>

                <TableRow
                    android:layout_weight="3"
                    android:weightSum="2"
                    android:orientation="horizontal">


                    <!--<NumberPicker-->
                    <!--android:id="@+id/startTime"-->
                    <!--android:layout_width="200dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:clickable="false"-->
                    <!--android:saveEnabled="false"-->
                    <!--android:theme="@android:style/Theme.Holo.NoActionBar"></NumberPicker>-->

                    <LinearLayout
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:weightSum="4">

                        <NumberPicker
                            android:id="@+id/shours"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:clickable="false"></NumberPicker>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:text="Hrs"
                            android:textAlignment="center"
                            android:textColor="@color/colorGreen"
                            android:textSize="30dp" />

                        <NumberPicker
                            android:id="@+id/sminutes"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"></NumberPicker>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="Min"
                            android:textAlignment="center"
                            android:textColor="@color/colorGreen"
                            android:textSize="30dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:weightSum="4">

                        <NumberPicker
                            android:id="@+id/hours"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:clickable="false"></NumberPicker>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="10dp"
                            android:text="Hrs"
                            android:textAlignment="center"
                            android:textColor="@color/colorGreen"
                            android:textSize="30dp" />

                        <NumberPicker
                            android:id="@+id/minutes"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"></NumberPicker>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="Min"
                            android:textAlignment="center"
                            android:textColor="@color/colorGreen"
                            android:textSize="30dp" />

                    </LinearLayout>


                    <!--<NumberPicker-->
                    <!--android:id="@+id/endTime"-->
                    <!--android:layout_width="200dp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--</NumberPicker>-->

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TableRow
                    android:layout_gravity="center"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:labelFor="@+id/nameInput"
                        android:text="@string/name"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorRed"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/roomText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:labelFor="@+id/spinner"
                        android:padding="3dp"
                        android:text="@string/room"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorRed"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/purposeText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:labelFor="@+id/purpose"
                        android:padding="3dp"
                        android:text="@string/purpose"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/colorRed"
                        android:textSize="30dp" />

                </TableRow>

                <TableRow
                    android:layout_gravity="center"
                    android:weightSum="3" >

                    <EditText
                        android:id="@+id/nameInput"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="@string/name_hint"
                        android:padding="3dp"
                        android:textAlignment="center"
                        android:textSize="30dp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="20dp" />

                    <EditText
                        android:id="@+id/purpose"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="@string/purpose_hint"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:textAlignment="center"
                        android:textSize="30dp" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="6"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:background="@color/colorButtons"
                    android:onClick="cancel"
                    android:text="@string/cancel"
                    android:textColor="@color/colorGreen"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/book"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:background="@color/colorButtons"
                    android:onClick="bookRoom"
                    android:text="@string/book"
                    android:textColor="@color/colorGreen"
                    android:textSize="20dp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
